infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: ticket-app.dev
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-srv
            port:
              number: 4000
      - path: /expiration
        pathType: Prefix
        backend:
          service:
            name: expiration-srv
            port:
              number: 4001
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: orders-srv
            port:
              number: 4002
      - path: /payment
        pathType: Prefix
        backend:
          service:
            name: payment-srv
            port:
              number: 4003
      - path: /tickets
        pathType: Prefix
        backend:
          service:
            name: tickets-srv
            port:
              number: 4004
